test/typeerrors/Heuristics/UnifierCaseLeft2.hs
test = case True of
          0 -> "hello"
          _ -> "world"
